--- a/frontend/src/components/styles/VisibilitySettings.css
+++ b/frontend/src/components/styles/VisibilitySettings.css
@@ -1,5 +1,5 @@
-.ui.selection.dropdown.dropDownBar {
-	background-color: transparent;
-	padding: 2%;
-	min-width: 10em;
+.ui.labeled.button:not(.icon) {
+	border: 1px solid rgba(34,36,38,.15) !important;
+	padding: 2% !important;
+	margin: 0 !important;
 }
